--- a/app/src/main/res/layout/activity_mobile_recharge.xml
+++ b/app/src/main/res/layout/activity_mobile_recharge.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.MobileRecharge"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial">
 
     <EditText
         android:layout_width="match_parent"
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/input"
             android:id="@+id/mobile_recharge_all"
-            android:padding="5dp"
+            android:padding="3dp"
             android:text="All"
             android:layout_marginRight="2dp"
             android:layout_marginTop="6dp"
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/input"
             android:id="@+id/mobile_recharge_full_tt"
-            android:padding="5dp"
+            android:padding="3dp"
             android:layout_toRightOf="@id/mobile_recharge_all"
             android:text="Full TT"
             android:layout_marginRight="2dp"
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/input"
             android:id="@+id/mobile_recharge_full_top_up"
-            android:padding="5dp"
+            android:padding="3dp"
             android:layout_toRightOf="@id/mobile_recharge_full_tt"
             android:text="TOP UP"
             android:layout_marginRight="2dp"
@@ -114,7 +114,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/input"
             android:id="@+id/mobile_recharge_3g"
-            android:padding="5dp"
+            android:padding="3dp"
             android:layout_toRightOf="@id/mobile_recharge_full_top_up"
             android:text="3G/4G"
             android:layout_marginRight="2dp"
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/input"
             android:id="@+id/mobile_recharge_2g"
-            android:padding="5dp"
+            android:padding="3dp"
             android:layout_toRightOf="@id/mobile_recharge_3g"
             android:text="2G"
             android:layout_marginRight="2dp"
@@ -144,7 +144,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/input"
             android:id="@+id/mobile_recharge_SMS"
-            android:padding="5dp"
+            android:padding="3dp"
             android:layout_toRightOf="@id/mobile_recharge_2g"
             android:text="SMS"
             android:layout_marginRight="2dp"
@@ -159,7 +159,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/input"
             android:id="@+id/mobile_recharge_roaming"
-            android:padding="5dp"
+            android:padding="3dp"
             android:layout_toRightOf="@id/mobile_recharge_SMS"
             android:text="Roaming"
             android:layout_marginRight="2dp"
@@ -174,7 +174,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/input"
             android:id="@+id/mobile_recharge_combo"
-            android:padding="5dp"
+            android:padding="3dp"
             android:layout_toRightOf="@id/mobile_recharge_roaming"
             android:text="COMBO"
             android:layout_marginRight="2dp"
