--- a/app/src/main/res/layout/browse_plan_child_list.xml
+++ b/app/src/main/res/layout/browse_plan_child_list.xml
@@ -44,8 +44,7 @@
         android:id="@+id/recharge_button"
         android:textStyle="bold"
         android:textColor="#ffffff"
-        android:layout_margin="5dp"
-        android:visibility="gone"/>
+        android:layout_margin="5dp"/>
 
 
 </RelativeLayout>
