--- a/app/src/main/res/layout/activity_admin_retailer_verification.xml
+++ b/app/src/main/res/layout/activity_admin_retailer_verification.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.AdminRetailerVerification"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial"
+    android:padding="10dp">
 
 
     <LinearLayout
@@ -13,35 +14,39 @@
         android:layout_height="wrap_content"
         android:weightSum="5"
         android:orientation="horizontal"
-        android:id="@+id/admin_retailer_verification_linear">
+        android:background="@drawable/input"
+        android:id="@+id/admin_retailer_verification_linear"
+        android:padding="5dp"
+        android:layout_margin="5dp">
 
         <EditText
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:id="@+id/admin_retailer_verification_search"
             android:hint="Search by Name"
             android:textColor="@color/black"
             android:background="@drawable/input"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:paddingLeft="20dp"
+            android:padding="5dp"
             android:maxLines="1"
             android:layout_weight="4"
             />
 
-        <Button
+        <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
+            android:layout_height="30dp"
             android:background="@drawable/input"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="2dp"
-            android:id="@+id/admin_retailer_verification_search_button"
-            android:text="Search"
-            android:textColor="@color/white"
-            android:textSize="9sp"
-            />
+            android:layout_weight="1">
+
+            <ImageButton
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/baseline_search_24"
+                android:id="@+id/admin_retailer_verification_search_button"
+                />
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -50,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/admin_retailer_verification"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:scrollbars="vertical"
         android:layout_below="@id/admin_retailer_verification_linear">
 
