--- a/app/src/main/res/layout/activity_admin_user_retailer_verification_details.xml
+++ b/app/src/main/res/layout/activity_admin_user_retailer_verification_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.AdminUserRetailerVerificationDetails"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial">
     
     <ImageView
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="3dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
         android:weightSum="2">
         <Button
