--- a/app/src/main/res/layout/activity_banner_update.xml
+++ b/app/src/main/res/layout/activity_banner_update.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.BannerUpdateActivity"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial"
+    android:padding="10dp">
 
 
     <Spinner
@@ -16,6 +17,7 @@
         android:spinnerMode="dropdown"
         android:layout_marginTop="30dp"
         android:layout_margin="10dp"
+        android:padding="5dp"
         />
 
     <ImageView
@@ -42,13 +44,14 @@
     <Button
         android:id="@+id/upload"
         android:text="UPLOAD"
+        android:background="@drawable/button"
         android:textColor="@color/black"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+        android:layout_height="50dp"
         android:padding="10dp"
         android:gravity="center_horizontal"
         android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/teal_700"
         android:layout_below="@id/select_image_txt"/>
 
 </RelativeLayout>
