--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.ContactUsActivity"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial">
 
     <Spinner
         android:id="@+id/contact_us_spinner"
@@ -18,6 +18,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:padding="10dp"
         />
 
     <EditText
@@ -40,13 +41,12 @@
         android:id="@+id/send_query"
         android:text="Send Query"
         android:textColor="@color/black"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:layout_marginTop="5dp"
-        android:gravity="center_horizontal"
         android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/teal_700"
+        android:background="@drawable/button"
+        android:layout_margin="5dp"
         android:layout_below="@id/contact_us_query"/>
 
     <RelativeLayout
