--- a/app/src/main/res/layout/activity_link_update.xml
+++ b/app/src/main/res/layout/activity_link_update.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.LinkUpdateActivity"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial">
 
     <Spinner
         android:id="@+id/link_update_spinner"
@@ -14,8 +14,8 @@
         android:background="@drawable/input"
         android:spinnerMode="dropdown"
         android:layout_marginTop="30dp"
+        android:padding="5dp"
         android:layout_margin="5dp"
-        android:layout_marginBottom="5dp"
         />
 
     <EditText
@@ -26,7 +26,9 @@
         android:hint="Enter Link"
         android:layout_below="@id/link_update_spinner"
         android:background="@drawable/input"
-        android:layout_margin="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:paddingLeft="20dp"
         android:maxLines="1"
         />
@@ -36,12 +38,14 @@
         android:id="@+id/update_link"
         android:text="Update Link"
         android:textColor="@color/black"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:gravity="center_horizontal"
         android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/teal_700"
+        android:background="@drawable/button"
         android:layout_below="@id/link_edittext"/>
 
 </RelativeLayout>
