--- a/app/src/main/res/layout/activity_query.xml
+++ b/app/src/main/res/layout/activity_query.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.QueryActivity"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial">
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,7 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/query_recycler_view"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        android:layout_margin="10dp"
+        android:padding="10dp">
     </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
