--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,19 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.RegisterActivity"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial">
+
+    <!-- Circular Image View  -->
+    <de.hdodenhof.circleimageview.CircleImageView
+        app:civ_border_width="4dp"
+        android:layout_centerHorizontal="true"
+        android:src="@mipmap/logo_icon"
+        app:civ_border_color="#FF000000"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_above="@id/email"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/lnp_logo_image"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/email"
-        android:hint="Phone Number"
+        android:hint="Email ID"
         android:textColor="@color/black"
         android:background="@drawable/input"
-        android:layout_marginTop="250dp"
+        android:layout_centerInParent="true"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:paddingLeft="20dp"
         android:maxLines="1"
         />
@@ -56,6 +70,20 @@
         android:textStyle="bold"
         android:textColor="#ffffff"
         android:layout_margin="5dp"/>
+
+    <TextView
+        android:id="@+id/contact_us_mobile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:padding="2sp"
+        android:text="Please mail to Customercare@lnpminibank.com in case of any issue."
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="5dp"
+        android:layout_centerHorizontal="true"/>
 
 
 </RelativeLayout>
