--- a/app/src/main/res/layout/activity_single_view.xml
+++ b/app/src/main/res/layout/activity_single_view.xml
@@ -3,42 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial">
 
-    <!--    <ImageView android:id="@+id/SingleView"-->
-    <!--        android:layout_width="fill_parent"-->
-    <!--        android:layout_height="fill_parent"/>-->
-    <!--    <include-->
-    <!--        layout="@layout/app_bar_layout"-->
-    <!--        android:id="@+id/Find_Friends_Toolbar"/>-->
-
-    <!--    <Spinner-->
-    <!--        android:id="@+id/spinner1"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:spinnerMode="dropdown"-->
-    <!--        android:background="@drawable/input"-->
-    <!--        android:layout_centerHorizontal="true"-->
-    <!--        android:layout_margin="40dp"-->
-    <!--        android:paddingLeft="20dp"/>-->
-
-
-    <!--
-    slideranimation duration is to set duration for transition between two slides
-    sliderautocycledirection is to set animationbetween transition of your slides
-    sliderindicator enables is used to display the indicators for slider
-    slider indicator gravity is to set gravity for indicator gravity
-    slider indicator margin is to set margin for indicator
-    slider indicator orientation is used to add orientation for slider
-    slider indicator padding is use to add padding to indicator
-    slider indicator selected color is use to specify selected color
-    and slider indicator unselected color is use to specify the color when the slider is unselected
-    slider scroll time in sec is used to specify scrolling time in seconds
-    -->
     <com.smarteist.autoimageslider.SliderView
         android:id="@+id/slider"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="125dp"
         android:layout_margin="3dp"
         app:sliderAnimationDuration="600"
         app:sliderAutoCycleDirection="back_and_forth"
@@ -53,15 +23,44 @@
         app:sliderIndicatorUnselectedColor="#FFF"
         app:sliderScrollTimeInSec="1" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/single_view_text_heading"
+        android:text="Query for Loan"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold"
+        android:layout_below="@id/slider"
+        android:layout_margin="3dp"
+        android:paddingLeft="20dp"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/single_view_text_term"
+        android:layout_below="@+id/single_view_text_heading"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="3dp"
+        android:paddingLeft="20dp"
+        />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/fullname_edittext"
-        android:layout_below="@id/slider"
+        android:layout_below="@id/single_view_text_term"
         android:hint="Full Name"
         android:background="@drawable/input"
-        android:layout_margin="5dp"
-        android:paddingLeft="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:padding="10dp"
         android:maxLines="1"/>
 
     <EditText
@@ -71,8 +70,10 @@
         android:layout_below="@id/fullname_edittext"
         android:hint="Address"
         android:background="@drawable/input"
-        android:layout_margin="5dp"
-        android:paddingLeft="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        android:padding="10dp"
         android:maxLines="1"/>
 
     <RelativeLayout
@@ -90,9 +91,10 @@
             android:id="@+id/loan_category_edittext"
             android:spinnerMode="dropdown"
             android:background="@drawable/input"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="5dp"
-            android:paddingLeft="20dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"/>
 
 
         <Spinner
@@ -103,8 +105,10 @@
             android:spinnerMode="dropdown"
             android:background="@drawable/input"
             android:layout_centerHorizontal="true"
-            android:layout_margin="5dp"
-            android:paddingLeft="20dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"/>
 
         <EditText
             android:layout_width="match_parent"
@@ -114,8 +118,10 @@
             android:hint="Loan Amount"
             android:phoneNumber="true"
             android:background="@drawable/input"
-            android:layout_margin="5dp"
-            android:paddingLeft="20dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"
             android:maxLines="1"/>
         <!--        Loan ends-->
         <!--       CA Service-->
@@ -127,8 +133,10 @@
             android:spinnerMode="dropdown"
             android:background="@drawable/input"
             android:layout_centerHorizontal="true"
-            android:layout_margin="5dp"
-            android:paddingLeft="20dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"/>
         <!--       CA Service ends-->
         <!--    Engineer Service-->
         <Spinner
@@ -139,8 +147,10 @@
             android:spinnerMode="dropdown"
             android:background="@drawable/input"
             android:layout_centerHorizontal="true"
-            android:layout_margin="5dp"
-            android:paddingLeft="20dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"/>
 
         <Spinner
             android:layout_width="match_parent"
@@ -151,20 +161,24 @@
             android:spinnerMode="dropdown"
             android:background="@drawable/input"
             android:layout_centerHorizontal="true"
-            android:layout_margin="5dp"
-            android:paddingLeft="20dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"/>
 
         <!--Super Saving Pack-->
         <Spinner
+            android:id="@+id/tenure_edittext"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:id="@+id/tenure_edittext"
-            android:hint="Tenure"
-            android:spinnerMode="dropdown"
-            android:background="@drawable/input"
             android:layout_centerHorizontal="true"
-            android:layout_margin="5dp"
-            android:paddingLeft="20dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"
+            android:background="@drawable/input"
+            android:hint="Tenure"
+            android:spinnerMode="dropdown" />
 
         <!--    To hide Stop-->
     </RelativeLayout>
@@ -176,10 +190,12 @@
         android:layout_below="@+id/hide_section"
         android:hint="Mobile Number"
         android:background="@drawable/input"
-        android:layout_margin="5dp"
         android:phoneNumber="true"
         android:maxLength="10"
-        android:paddingLeft="20dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
         android:maxLines="1"/>
 
     <EditText
@@ -190,8 +206,10 @@
         android:hint="Amount"
         android:phoneNumber="true"
         android:background="@drawable/input"
-        android:layout_margin="5dp"
-        android:paddingLeft="20dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
         android:maxLines="1"/>
 
 
@@ -205,5 +223,9 @@
         android:id="@+id/submit"
         android:textStyle="bold"
         android:textColor="#ffffff"
-        android:layout_margin="5dp"/>
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"/>
 </RelativeLayout>
