--- a/app/src/main/res/layout/activity_view_bbpsactivity.xml
+++ b/app/src/main/res/layout/activity_view_bbpsactivity.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.ViewBBPSActivity"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
