--- a/app/src/main/res/layout/activity_view_contact_form.xml
+++ b/app/src/main/res/layout/activity_view_contact_form.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.ViewContactFormActivity"
-    android:background="@drawable/background">
+    android:background="@mipmap/background_trial"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
