--- a/app/src/main/res/layout/activity_mobile_recharge_util.xml
+++ b/app/src/main/res/layout/activity_mobile_recharge_util.xml
@@ -16,10 +16,10 @@
         android:layout_margin="5dp"
         android:gravity="center_horizontal"
         android:padding="7dp"
-        android:verticalSpacing="7dp"
+        android:verticalSpacing="20dp"
         android:horizontalSpacing="7dp"
         android:numColumns="4"
-        android:background="@drawable/grid_background"
+        android:background="@mipmap/background_trial"
         android:stretchMode="columnWidth"
         >
     </GridView>
